# GlycoSignal

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: tests.yml
examples/: sample_cgm.csv
legacy/: cgm_feature_map.py  cgm_sliding_window.py  glycosignal.py
src/glycosignal/: __init__.py  __main__.py  cli.py  detect.py  features.py  io.py  metrics.py  plotting.py  preprocessing.py  registry.py  report.py  schemas.py  utils.py  windows.py
tests/: conftest.py  test_detect.py  test_features.py  test_io.py  test_metrics.py  test_plotting.py  test_preprocessing.py  test_windows.py
